# PedestrianDetector

./: CMakeLists.txt  README  README.md  package.xml
files/: StrongClassifierTreeStep9.txt  configuration.xml
include/: chnsCompute.hpp  chnsPyramid.hpp  convConst.hpp  getScales.hpp  gradientMex.hpp  imPadMex.hpp  imResampleMex.hpp  opencvInterface.hpp  pedDetTracker_ROS.hpp  pedDetector.hpp  readFiles.hpp  rgbConvert.hpp  rgbConvertMex.hpp  sse.hpp  strongClassifierTree.hpp  wrappers.hpp
src/: CMakeLists.txt  chnsCompute.cpp  chnsPyramid.cpp  convConst.cpp  getScales.cpp  gradientMex.cpp  main.cpp  opencvInterface.cpp  pedDetTrackerMain_ROS.cpp  pedDetTracker_ROS.cpp  pedDetector.cpp  readFiles.cpp  rgbConvert.cpp  strongClassifierTree.cpp  wrappers.cpp
